# bonsai-dwarf-fortress

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  PROJECT_VISION.md  README.md
bridge/: __init__.py  advancement_commands_probe.py  advancement_progress_probe.py  animal_breeding_probe.py  animal_care_probe.py  baseline_rules.py  bridge.py  building_construction_probe.py  contract.lua  contracts.json  contracts.py  core.lua  cpu_baseline.lua  cpu_baseline.py  crafting_progress_probe.py  current_time_probe.py  cutting_progress_probe.py  defense_jobs_probe.py  designation_probe.py  digging_progress_probe.py  equipment_repair_probe.py  faction_api.py  faction_probe.py  festival_schedule_probe.py  finish_probe.py  food_preparation_quality_probe.py  food_stock_probe.py  food_stock_probe_api.py  harvest_progress_probe.py  inventory_value_probe.py  inventory_weight_probe.py  item_probe.py  job_counts_probe.py  job_queue_probe.py  job_summary_probe.py  labor_probe.py  labor_progress_probe.py  labour_probe.py  material_extraction_probe.py  material_probe.py  (+51 more)
control_plane/: README.md  pyproject.toml
control_plane/bonsai_control/: __init__.py  auth.py  cycle_policy.py  db.py  main.py  orchestrator.py  policy.py  promoter.py  quality_gate.py  schemas.py  settings.py
control_plane/bonsai_control/templates/: dashboard.html
control_plane/db/migrations/: 001_initial.sql  002_worker_status.sql  003_external_evaluator.sql
control_plane/systemd/: bonsai-api.service  bonsai-orchestrator.service  bonsai-promoter.service
control_plane/tests/: test_cycle_policy.py  test_dashboard_helpers.py  test_orchestrator_helpers.py  test_policy.py  test_promoter.py
curricula/: 30_day_cpu_baseline_test.py  30day_cpu.yaml  levels.py
docs/: AUTONOMY_AUDIT_2026-07-22.md  EXTERNAL_EVALUATOR_ARCHITECTURE.md  NEXT_OBJECTIVES.md
evaluator_public/: 30_day_cpu_baseline_test.lua  __init__.py  baseline_rules_test.py  cpu_baseline_helper.py  cpu_baseline_note.py  cpu_baseline_test.lua  cpu_baseline_test.py  extra_helper.py  implementation.py  (+5 more)
lab_agent/: README.md  pyproject.toml
lab_agent/bonsai_lab_agent/: __init__.py  controller_host.py  evaluator.py  k2_proxy.py  probe_guard.py  worker.py
lab_agent/bonsai_lab_agent/dfhack/: bonsai-eval-state.lua
lab_agent/config/: opencode.json
lab_agent/deploy/: bonsai-k2-proxy.service  k2.env.example  opencode.k2.json
lab_agent/systemd/: bonsai-df-runtime.service  bonsai-evaluator.service  bonsai-lab-agent.service
lab_agent/tests/: test_evaluator.py  test_k2_proxy.py  test_worker.py
(+225 files in other folders)
