[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai-control"
version = "0.4.2"
description = "Trusted orchestrator and self-tracking dashboard for Bonsai Dwarf Fortress"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[project.scripts]
bonsai-orchestrator = "bonsai_control.orchestrator:main"
bonsai-promoter = "bonsai_control.promoter:main"

[tool.setuptools.packages.find]
include = ["bonsai_control*"]

[tool.setuptools.package-data]
bonsai_control = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
