[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai-lab-agent"
version = "0.4.0"
description = "Durable OpenCode harness wrapper for the Bonsai Dwarf Fortress lab"
requires-python = ">=3.13"

[project.scripts]
bonsai-lab-agent = "bonsai_lab_agent.worker:main"

[tool.setuptools.packages.find]
include = ["bonsai_lab_agent*"]
