[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai-lab-agent"
version = "0.8.1"
description = "Durable OpenCode harness wrapper for the Bonsai Dwarf Fortress lab"
requires-python = ">=3.13"

[project.scripts]
bonsai-lab-agent = "bonsai_lab_agent.worker:main"

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]

[tool.setuptools.packages.find]
include = ["bonsai_lab_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
