[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai-lab-agent"
version = "0.17.10"
description = "Durable OpenCode harness wrapper for the Bonsai Dwarf Fortress lab"
requires-python = ">=3.13"
dependencies = [
  "mypy>=1.20,<2",
  "ruff>=0.15,<1",
]

[project.scripts]
bonsai-lab-agent = "bonsai_lab_agent.worker:main"
bonsai-df-probe = "bonsai_lab_agent.probe_guard:main"
bonsai-k2-proxy = "bonsai_lab_agent.k2_proxy:main"

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]

[tool.setuptools.packages.find]
include = ["bonsai_lab_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
